# ChangeLog for dev-tcltk/tclx
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclx/ChangeLog,v 1.39 2007/06/02 15:48:57 armin76 Exp $

  02 Jun 2007; Raúl Porcel <armin76@gentoo.org> tclx-8.4-r1.ebuild:
  Stabilizing latest as actual stable doesn't work with stable gcc

  01 Jun 2007; Raúl Porcel <armin76@gentoo.org> tclx-8.4-r1.ebuild:
  Add ~alpha wrt #176268

  01 Jun 2007; Peter Weller <welp@gentoo.org> tclx-8.4-r1.ebuild:
  Stable on amd64 wrt bug 176268

  31 Dec 2006; Matti Bickel <mabi@gentoo.org> tclx-8.4-r1.ebuild:
  ppc stable (bug #148854)

  22 Dec 2006; Ferris McCormick <fmccor@gentoo.org> tclx-8.4-r1.ebuild:
  Stable on sparc.  Builds fine, runs all tests, no open bugs.

  15 Dec 2006; Matti Bickel <mabi@gentoo.org> ChangeLog:
  Readding ~ppc for bug #148854

  03 Dec 2006; Christian Faulhammer <opfer@gentoo.org> tclx-8.4-r1.ebuild:
  stable x86, bug #148854

  01 Dec 2006; Ferris McCormick <fmccor@gentoo.org> tclx-8.4-r1.ebuild:
  Re-adding ~sparc keyword:  Builds fine and runs all its tests with or w/o
  USE=threads.  (Both with USE=tk)

*tclx-8.4-r1 (30 Nov 2006)

30 Nov 2006; Markus Ullmann <jokey@gentoo.org> -files/tclx-8.3-argv.patch,
  -files/tclx-8.3-makecfg.patch, +files/tclx-8.4-relid.patch,
  +files/tclx-8.4-varinit.patch, -tclx-8.3-r1.ebuild, -tclx-8.4.ebuild,
  +tclx-8.4-r1.ebuild:
  Cleaning up and using improved ebuild from bug #95845 thanks to Sebastien
  Fabbro

*tclx-8.4 (01 Nov 2006)

  01 Nov 2006; Markus Ullmann <jokey@gentoo.org> metadata.xml,
  +tclx-8.4.ebuild:
  Version bump to fix bug #95845 and bug #133099

  23 Aug 2006; Jason Wever <weeve@gentoo.org> tclx-8.3.5.ebuild:
  Stable on SPARC.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-tclx-8.3-r1,
  files/digest-tclx-8.3.5, Manifest:
  Fixing SHA256 digest, pass four

  28 Feb 2006; Mike Frysinger <vapier@gentoo.org>
  +files/tclx-8.3.5-configure.patch, tclx-8.3.5.ebuild: