@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tclx
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclx/ChangeLog,v 1.39 2007/06/02 15:48:57 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclx/ChangeLog,v 1.40 2009/08/05 20:10:09 mescalinum Exp $
+
+  05 Aug 2009; Federico Ferri <mescalinum@gentoo.org> tclx-8.4-r1.ebuild:
+  disable tests wrt bug 279283
 
   02 Jun 2007; Raúl Porcel <armin76@gentoo.org> tclx-8.4-r1.ebuild:
   Stabilizing latest as actual stable doesn't work with stable gcc
